--- a/.env.dev
+++ b/.env.dev
@@ -2,3 +2,5 @@
 ###> symfony/framework-bundle ###
 APP_SECRET=b5e4580f38d050fa295e20c43d9e001a
 ###< symfony/framework-bundle ###
+
+DATABASE_URL="mysql://root:@127.0.0.1:3306/blog?serverVersion=8.4.3&charset=utf8mb4"
